--- a/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.Rmd
+++ b/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.Rmd
@@ -118,13 +118,13 @@ Simply set `options(shiny.useragg = TRUE)` before rendering. Also check out the 
 
 Now that you have `{ragg}` and `{systemfonts}` installed, take it for a spin with a custom font! When you're rendering plots using `{ragg}`, custom fonts should _just work_ as long as you have them installed on your local machine. 
 
-If you haven't really worked with custom fonts before, "installing a custom font" simply means finding the font file on the internet, downloading it, and drag-and-drop into a special folder on your local machine. It's something like `Network/Library/Fonts` for Macs and `Microsoft/Windows/Fonts` for Windows. There can actually be a bit more to this (in Windows 10, for example, you have to drag and drop fonts onto the "Fonts" section of Settings), so make sure to google and check the process for installing fonts for your machine.
+If you haven't really worked with custom fonts before, "installing a custom font" simply means finding the font file on the internet, downloading it, and drag-and-drop into a special folder on your local machine. It's something like _Network/Library/Fonts_ for Macs and _Microsoft/Windows/Fonts_ for Windows. There can actually be a bit more to this (in Windows 10, for example, you have to drag and drop fonts onto the "Fonts" section of Settings), so make sure to google and check the process for installing fonts for your machine.
 
 ### Finding the right file
 
 Font files come in many forms. In general, fonts files that match these two criteria tend to work the best:
 
-1. **Fonts in _.otf_ (OpenType Font) or _.ttf_ (TrueType Font) formats**. These are font formats that are installable on your local machine. You want to avoid other formats like `.woff` or `.woff2`, for example, which are designed for use for the web. In theory both _.otf_ and _.ttf_ should work with `{ragg}`, though I've sometimes had trouble with _.otf_. In those cases, I simply converted the _.otf_ font file to _.ttf_ before installing it, using free online conversion tools that you can easily find on Google. I'm of course glossing over the details here and I'm hardly an expert, but you can [read  more about TrueType and OpenType formats here](https://helpx.adobe.com/fonts/using/adobe-type-resources-faq.html).
+1. **Fonts in _.otf_ (OpenType Font) or _.ttf_ (TrueType Font) formats**. These are font formats that are installable on your local machine. You want to avoid other formats like _.woff_ or _.woff2_, for example, which are designed for use for the web. In theory both _.otf_ and _.ttf_ should work with `{ragg}`, though I've sometimes had trouble with _.otf_. In those cases, I simply converted the _.otf_ font file to _.ttf_ before installing it, using free online conversion tools that you can easily find on Google. I'm of course glossing over the details here and I'm hardly an expert, but you can [read  more about TrueType and OpenType formats here](https://helpx.adobe.com/fonts/using/adobe-type-resources-faq.html).
 
 2. **Static fonts**. In static fonts, each _member_ of the family has their own set of _glyphs_ (i.e., there is a font file for each _style_). This is in contrast to _variable fonts_, where you have a single font file which can take the form of multiple styles (either by having many sets of glyphs or variable parameters).^[Variable fonts are hit-or-miss because while `{ragg}` and `{systemfonts}` _do_ support some variable font features (see the section on **Advanced features**), "variable" can mean many different things, some of which are not supported (e.g., variable width). If you install a variable font, it might render with `{ragg}` but you're unlikely to be able to tweak its parameters (like change the weight, for example).] To illustrate, look at the difference between the static (top) vs. variable (bottom) files for the [Alegreya family](https://fonts.google.com/specimen/Alegreya).
 
@@ -136,7 +136,7 @@ Font files come in many forms. In general, fonts files that match these two crit
     include_graphics("https://pbs.twimg.com/media/EzBphU4WQAE6mFs?format=png&name=900x900")
     ```
 
-     We see that static fonts are differentiated from variable fonts by having a distinct file for each style, like `Alegreya-Black.ttf`. On the other hand, variable fonts usually say "variable" somewhere in the file name, and are slightly larger in size than any individual static member. Note that not all fonts have both static and variable files, and not all static font files are _.ttf_ (there can be static _.otf_ and variable _.ttf_ files).^[In my experience, though, static fonts tend to be _.ttf_ and variable fonts tend to be _.otf_.]
+     We see that static fonts are differentiated from variable fonts by having a distinct file for each style, like _Alegreya-Black.ttf_. On the other hand, variable fonts usually say "variable" somewhere in the file name, and are slightly larger in size than any individual static member. Note that not all fonts have both static and variable files, and not all static font files are _.ttf_ (there can be static _.otf_ and variable _.ttf_ files).^[In my experience, though, static fonts tend to be _.ttf_ and variable fonts tend to be _.otf_.]
 
 The above two images show the contents of the _.zip_ file that you'd get if you went to [Google Fonts](https://fonts.google.com/) (an awesome repository of free and open-source professional fonts) and clicked the **Download family** button on the [page for Alegreya](https://fonts.google.com/specimen/Alegreya). If you want to use the Alegreya font family ([Open Font License](https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL)^["You can use them freely in your products & projects - print or digital, commercial or otherwise. However, you can't sell the fonts on their own."]) in R, then you simply drag-and-drop all the static font files in `/static` into your system's font folder (or in Settings > Fonts for Windows 10).
 
@@ -183,7 +183,7 @@ So far we've seen that the workflow for setting up and installing fonts is prett
 
 Consider the case of using [Font Awesome](https://fontawesome.com/), an icon font that renders _special character sequences_ as _icon glyphs_ (check the **Icon fonts** section for more!). Font Awesome has a free version ([CC-BY and SIL OFL license](https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/LICENSE.txt)), and let's say we want to use it for personal use for a [TidyTuesday](https://github.com/rfordatascience/tidytuesday) submission.
 
-The first thing we do is locate the font file. Font Awesome is open source, and the free version (Font Awesome 5 Free) is updated on Github. The most recent release as of this blog post is 5.15.3 - follow [this link](https://github.com/FortAwesome/Font-Awesome/releases/tag/5.15.3) to download `fontawesome-free-5.15.3-desktop.zip`. If you unzip the file, you'll find _.otf_ font files corresponding to the three styles available in the free version: Regular, Solid, and Brands.
+The first thing we do is locate the font file. Font Awesome is open source, and the free version (Font Awesome 5 Free) is updated on Github. The most recent release as of this blog post is 5.15.3 - follow [this link](https://github.com/FortAwesome/Font-Awesome/releases/tag/5.15.3) to download _fontawesome-free-5.15.3-desktop.zip_. If you unzip the file, you'll find _.otf_ font files corresponding to the three styles available in the free version: Regular, Solid, and Brands.
 
 ```{r fa-files, echo = FALSE, fig.cap="Font Awesome 5 files", fig.align='center', out.width="80%"}
 include_graphics("img/fa_otf.png", error = FALSE)
@@ -654,7 +654,7 @@ Some extra stuff not mentioned in the talk:
       theme_classic()
     ```
 
-- All fonts based on SVG (which is the case for pretty much all icon fonts) should work with `{ragg}` as long as you can get it installed on your local machine. For example, the [Bootstrap Icons](https://github.com/twbs/icons) font ([MIT license](https://github.com/twbs/icons/blob/main/LICENSE.md)) only come in `.woff` and `.woff2` [files](https://github.com/twbs/icons/tree/main/font/fonts) for web use, but it's fundamentally just a collection of SVGs, so it can be installed on your local machine once you convert to _.ttf_. Then it should just work right in R out of the box.
+- All fonts based on SVG (which is the case for pretty much all icon fonts) should work with `{ragg}` as long as you can get it installed on your local machine. For example, the [Bootstrap Icons](https://github.com/twbs/icons) font ([MIT license](https://github.com/twbs/icons/blob/main/LICENSE.md)) only come in _.woff_ and _.woff2_ [files](https://github.com/twbs/icons/tree/main/font/fonts) for web use, but it's fundamentally just a collection of SVGs, so it can be installed on your local machine once you convert to _.ttf_. Then it should just work right in R out of the box.
 
     ```{r}
     ggplot(NULL, aes(0, 0)) +
